--- a/Views/User/Detalle_Cookiecakes_Chipcake.cshtml
+++ b/Views/User/Detalle_Cookiecakes_Chipcake.cshtml
@@ -1,33 +1,45 @@
 ﻿@model CRACKED.Dtos.ProductListDto
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AgregarProductoAlCarrito", "Carrito", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <hr />
-    <div class="container-fluid">
-        <div class="row justify-content-evenly ">
-            <div class="col-4">
-                <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="580" height="460" class="img-fluid" />
+    <div class="form-horizontal">
+        <hr />
+        <div class="container-fluid">
+            @{ // Verificar si hay un mensaje de error en ViewBag
+                                var errorMessage = ViewBag.ErrorMessage as string; }
 
-            </div>
-            <div class="col-4">
-                <div>
-                    <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">@Model.Products[0].Nombre</h2>
-                    <h4 style="color: black; font-family: cursive; text-align: left; ">$ @Model.Products[0].Precio</h4>
-                    <label style="color: black; font-family: cursive; text-align: left; display: block; margin-top: 10px;">
-                        Una deliciosa fusión entre el pastel y la clásica galleta de chispas de chocolate. Con una textura suave y esponjosa, este pastel está lleno de trozos de chocolate derretido que se derriten en la boca con cada bocado. Su sabor dulce y reconfortante, combinado con el toque crujiente de las chispas de chocolate, lo convierte en el postre perfecto para cualquier ocasión. Ideal para compartir con amigos y familiares o disfrutar solo en un momento de antojo.
-                    </label>
+            @if (!string.IsNullOrEmpty(errorMessage))
+            {
+        <div class="alert alert-danger" role="alert">
+            @errorMessage
+        </div>}
+            <div class="row justify-content-evenly ">
+                <div class="col-4">
+                    <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="580" height="460" class="img-fluid" />
 
+                </div>
+                <div class="col-4">
+                    <div>
+                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">@Model.Products[0].Nombre</h2>
+                        <h4 style="color: black; font-family: cursive; text-align: left; ">$ @Model.Products[0].Precio</h4>
+                        <label style="color: black; font-family: cursive; text-align: left; display: block; margin-top: 10px;">
+                            Una deliciosa fusión entre el pastel y la clásica galleta de chispas de chocolate. Con una textura suave y esponjosa, este pastel está lleno de trozos de chocolate derretido que se derriten en la boca con cada bocado. Su sabor dulce y reconfortante, combinado con el toque crujiente de las chispas de chocolate, lo convierte en el postre perfecto para cualquier ocasión. Ideal para compartir con amigos y familiares o disfrutar solo en un momento de antojo.
+                        </label>
+                        <div class="js-qty__wrapper">
+                            <button id="decrement" class="qty-button">-</button>
+                            <input type="text" id="quantity" value="1" readonly>
+                            <button id="increment" class="qty-button">+</button>
+                        </div>
 
-
-                    <div class="js-qty__wrapper">
-                        <button id="decrement" class="qty-button" type="button">-</button>
-                        <input type="number" id="quantity" name="quantity" value="1" min="1">
-                        <button id="increment" class="qty-button" type="button">+</button>
+                        <!-- Campos Ocultos para IdProducto, Cantidad y Precio -->
+                        <input type="hidden" name="productoId" value="@Model.Products[0].IdProducto" />
+                        <input type="hidden" id="hiddenQuantity" name="cantidad" value="1" />
+                        <input type="hidden" name="precio" value="@Model.Products[0].Precio" />
+                        <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
+                        <input type="hidden" id="hiddenPortion" name="porcion" value="1">
                     </div>
-                    <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
                     <div class="row justify-content-start row-porcion">
                         <div class="col-sm-4">
                             <h5 style="color: black; font-family: cursive; text-align: left;"> Porciones:</h5>
@@ -51,7 +63,7 @@
             </div>
         </div>
     </div>
-</div>
+
     <div>
         @Html.ActionLink("Volver a la lista", "Index", "Home")
     </div>
@@ -62,28 +74,35 @@
         const incrementButton = document.getElementById("increment");
         const decrementButton = document.getElementById("decrement");
         const quantityInput = document.getElementById("quantity");
+        const hiddenQuantity = document.getElementById("hiddenQuantity");
 
-        incrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        incrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             quantityInput.value = Number(quantityInput.value) + 1;
+            hiddenQuantity.value = quantityInput.value;
         });
 
-        decrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        decrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             if (Number(quantityInput.value) > 1) {
                 quantityInput.value = Number(quantityInput.value) - 1;
+                hiddenQuantity.value = quantityInput.value;
             }
         });
 
+        hiddenQuantity.value = quantityInput.value;
+
         document.getElementById("Buttonx4").addEventListener("click", (event) => {
             event.preventDefault();
-            document.getElementById("selectionInput").value = "x4";
+            hiddenPortion.value = 4;
         });
 
         document.getElementById("Buttonx8").addEventListener("click", (event) => {
             event.preventDefault();
-            document.getElementById("selectionInput").value = "x8";
+            hiddenPortion.value = 8;
         });
+
+
     });
 </script>
 
