--- a/Views/User/Detalle_Cookiecakes_Oreo.cshtml
+++ b/Views/User/Detalle_Cookiecakes_Oreo.cshtml
@@ -1,33 +1,45 @@
 ﻿@model CRACKED.Dtos.ProductListDto
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AgregarProductoAlCarrito", "Carrito", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <hr />
-    <div class="container-fluid">
-        <div class="row justify-content-evenly ">
-            <div class="col-4">
-                <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="580" height="460" class="img-fluid" />
+    <div class="form-horizontal">
+        <hr />
+        <div class="container-fluid">
+            @{ // Verificar si hay un mensaje de error en ViewBag
+                                var errorMessage = ViewBag.ErrorMessage as string; }
 
-            </div>
-            <div class="col-4">
-                <div>
-                    <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">@Model.Products[0].Nombre</h2>
-                    <h4 style="color: black; font-family: cursive; text-align: left; ">$ @Model.Products[0].Precio</h4>
-                    <label style="color: black; font-family: cursive; text-align: left; display: block; margin-top: 10px;">
-                        Un delicioso pastel inspirado en la famosa galleta, con capas suaves y esponjosas de chocolate que se combinan con el inconfundible sabor de las galletas Oreo trituradas. Cada bocado está lleno de trozos crujientes de Oreo que se fusionan con una suave crema, creando una experiencia dulce y decadente. Cubierto con una generosa capa de crema y más trozos de galleta, este pastel es el postre perfecto para los amantes de Oreo, ideal para cualquier ocasión especial o como un antojo irresistible.
-                    </label>
-                    <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
+            @if (!string.IsNullOrEmpty(errorMessage))
+            {
+        <div class="alert alert-danger" role="alert">
+            @errorMessage
+        </div>}
+            <div class="row justify-content-evenly ">
+                <div class="col-4">
+                    <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="580" height="460" class="img-fluid" />
 
+                </div>
+                <div class="col-4">
+                    <div>
+                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">@Model.Products[0].Nombre</h2>
+                        <h4 style="color: black; font-family: cursive; text-align: left; ">$ @Model.Products[0].Precio</h4>
+                        <label style="color: black; font-family: cursive; text-align: left; display: block; margin-top: 10px;">
+                            Un delicioso pastel inspirado en la famosa galleta, con capas suaves y esponjosas de chocolate que se combinan con el inconfundible sabor de las galletas Oreo trituradas. Cada bocado está lleno de trozos crujientes de Oreo que se fusionan con una suave crema, creando una experiencia dulce y decadente. Cubierto con una generosa capa de crema y más trozos de galleta, este pastel es el postre perfecto para los amantes de Oreo, ideal para cualquier ocasión especial o como un antojo irresistible.
+                        </label>
+                        <div class="js-qty__wrapper">
+                            <button id="decrement" class="qty-button">-</button>
+                            <input type="text" id="quantity" value="1" readonly>
+                            <button id="increment" class="qty-button">+</button>
+                        </div>
 
-                    <div class="js-qty__wrapper">
-                        <button id="decrement" class="qty-button" type="button">-</button>
-                        <input type="number" id="quantity" name="quantity" value="1" min="1">
-                        <button id="increment" class="qty-button" type="button">+</button>
+                        <!-- Campos Ocultos para IdProducto, Cantidad y Precio -->
+                        <input type="hidden" name="productoId" value="@Model.Products[0].IdProducto" />
+                        <input type="hidden" id="hiddenQuantity" name="cantidad" value="1" />
+                        <input type="hidden" name="precio" value="@Model.Products[0].Precio" />
+                        <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
+                        @*<input type="hidden" id="hiddenPortion" name="porcion" value="1">*@
                     </div>
-
                     <div class="row justify-content-start row-porcion">
                         <div class="col-sm-4">
                             <h5 style="color: black; font-family: cursive; text-align: left;"> Porciones:</h5>
@@ -51,7 +63,7 @@
             </div>
         </div>
     </div>
-</div>
+
     <div>
         @Html.ActionLink("Volver a la lista", "Index", "Home")
     </div>
@@ -62,28 +74,34 @@
         const incrementButton = document.getElementById("increment");
         const decrementButton = document.getElementById("decrement");
         const quantityInput = document.getElementById("quantity");
+        const hiddenQuantity = document.getElementById("hiddenQuantity");
 
-        incrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        incrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             quantityInput.value = Number(quantityInput.value) + 1;
+            hiddenQuantity.value = quantityInput.value;
         });
 
-        decrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        decrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             if (Number(quantityInput.value) > 1) {
                 quantityInput.value = Number(quantityInput.value) - 1;
+                hiddenQuantity.value = quantityInput.value;
             }
         });
 
+        hiddenQuantity.value = quantityInput.value;
+
         document.getElementById("Buttonx4").addEventListener("click", (event) => {
             event.preventDefault();
-            document.getElementById("selectionInput").value = "x4";
+            hiddenPortion.value = 4;
         });
 
         document.getElementById("Buttonx8").addEventListener("click", (event) => {
             event.preventDefault();
-            document.getElementById("selectionInput").value = "x8";
+            hiddenPortion.value = 8;
         });
+
     });
 </script>
 
