--- a/Views/User/Detalle_Galletas_CookieNute.cshtml
+++ b/Views/User/Detalle_Galletas_CookieNute.cshtml
@@ -1,76 +1,91 @@
 ﻿@model CRACKED.Dtos.ProductListDto
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("AgregarProductoAlCarrito", "Carrito", FormMethod.Post))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-
         <hr />
         <div class="container-fluid">
-            <div class="row justify-content-evenly ">
+            @{ // Verificar si hay un mensaje de error en ViewBag
+                                var errorMessage = ViewBag.ErrorMessage as string; }
+
+            @if (!string.IsNullOrEmpty(errorMessage))
+            {
+        <div class="alert alert-danger" role="alert">
+            @errorMessage
+        </div>}
+            <div class="row justify-content-evenly">
                 <div class="col-4">
                     <img src="~/Content/Imagen/@Model.Products[0].Imagen" width="580" height="460" class="img-fluid" />
-
                 </div>
-                <div class="col-4">
-                    <div>
-                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;">@Model.Products[0].Nombre</h2>
-                        <h4 style="color: black; font-family: cursive; text-align: left; ">$ @Model.Products[0].Precio</h4>
+                <div class="col-4 ">
+                    <div class="container" style="display: flex; flex-direction: column; justify-content: center; ">
+                        <h2 style="color: saddlebrown; font-family: cursive; text-align: left;"> @Model.Products[0].Nombre</h2>
+                        <h4 style="color: black; font-family: cursive; text-align: left;">$ @Model.Products[0].Precio</h4>
+
+
                         <label style="color: black; font-family: cursive; text-align: left; display: block; margin-top: 10px;">
                             Una deliciosa combinación de chocolate y avellanas que captura la esencia de la famosa crema de avellanas. Con una textura suave por dentro y un toque crujiente por fuera, esta galleta es un verdadero placer para los amantes de los sabores indulgentes. Cada bocado ofrece un equilibrio perfecto entre el sabor cremoso de Nutella y una base de galleta irresistible. Ideal para disfrutar en cualquier momento y dejarse llevar por la suavidad y dulzura que solo Nutella puede ofrecer
                         </label>
 
-                    </div>
-                    <div class="js-qty__wrapper">
-                        <button id="decrement" class="qty-button">-</button>
-                        <input type="text" id="quantity" value="1" readonly>
-                        <button id="increment" class="qty-button">+</button>
-                    </div>
+                        <div class="js-qty__wrapper">
+                            <button id="decrement" class="qty-button">-</button>
+                            <input type="text" id="quantity" value="1" readonly>
+                            <button id="increment" class="qty-button">+</button>
+                        </div>
 
-                    <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
-
-                    <div class="form-group">
-                        <div class="col-sm-1">
-                            <input type="submit" value="AGREGAR AL CARRITO" class="btn btn-primary" />
+                        <!-- Campos Ocultos para IdProducto, Cantidad y Precio -->
+                        <input type="hidden" name="productoId" value="@Model.Products[0].IdProducto" />
+                        <input type="hidden" id="hiddenQuantity" name="cantidad" value="1" />
+                        <input type="hidden" name="precio" value="@Model.Products[0].Precio" />
+                        <input type="hidden" name="stock" value="@Model.Products[0].Stock" />
+                        <input type="hidden" id="hiddenPortion" name="porcion" value="1">
+                        <div class="form-group">
+                            <div class="col-sm-1">
+                                <input type="submit" value="AGREGAR AL CARRITO" class="btn btn-primary" />
+                            </div>
                         </div>
                     </div>
                 </div>
-
             </div>
-
-
-
         </div>
-
     </div>
-
-
     <div>
         @Html.ActionLink("Volver a la lista", "Index", "Home")
     </div>
 }
+
+
+
+
+
 <script>
     document.addEventListener("DOMContentLoaded", function () {
         const incrementButton = document.getElementById("increment");
         const decrementButton = document.getElementById("decrement");
         const quantityInput = document.getElementById("quantity");
+        const hiddenQuantity = document.getElementById("hiddenQuantity");
 
-        incrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        incrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             quantityInput.value = Number(quantityInput.value) + 1;
+            hiddenQuantity.value = quantityInput.value;
         });
 
-        decrementButton.addEventListener("click", (event) => {
-            event.preventDefault(); // Evita el comportamiento predeterminado
+        decrementButton.addEventListener("click", function (event) {
+            event.preventDefault();
             if (Number(quantityInput.value) > 1) {
                 quantityInput.value = Number(quantityInput.value) - 1;
+                hiddenQuantity.value = quantityInput.value;
             }
         });
+
+        hiddenQuantity.value = quantityInput.value;
+        hiddenPortion.value = 1;
     });
-
-
 </script>
+
 <script>
     document.getElementById("Buttonx4").addEventListener("click", () => {
         event.preventDefault();
